# chrome_launcher

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
src/: browser.rs  browser_launcher.rs  chrome_finder.rs  chrome_launcher.rs  cli.rs  flags.rs  lib.rs  main.rs  utils.rs
tests/: integration_tests.rs
