[package]
name = "chrome_launcher"
version = "1.0.0"
edition = "2021"
authors = ["chouzz"]
description = "A cross-platform Rust library for launching Chromium-based browsers with extensive configuration options"
keywords = ["chrome", "chromium", "browser", "launcher", "automation"]
categories = ["api-bindings", "command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/chouzz/chrome_launcher"
homepage = "https://github.com/chouzz/chrome_launcher"
documentation = "https://docs.rs/chrome_launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chrome_launcher"
crate-type = ["lib"]

[[bin]]
name = "chrome_launcher_cli"
path = "src/cli.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
home = "0.5.9"
serde_json = "1.0.127"

[dev-dependencies]
tempfile = "3.8"
