[package]
name = "browser_launcher"
version = "1.0.1"
edition = "2021"
authors = ["chouzz"]
description = "A cross-platform Rust library for launching browsers with extensive configuration options"
keywords = ["browser", "launcher", "automation", "chrome", "edge", "safari"]
categories = ["api-bindings", "command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/chouzz/browser_launcher"
homepage = "https://github.com/chouzz/browser_launcher"
documentation = "https://docs.rs/browser_launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "browser_launcher"
crate-type = ["lib"]

[[bin]]
name = "browser_launcher_cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
home = "0.5.9"
serde_json = "1.0.127"

[dev-dependencies]
tempfile = "3.8"
